refactor: Inline NodeAdapter#asText methods